[gd_scene load_steps=10 format=2]

[ext_resource path="res://special_scenes/Intro.gd" type="Script" id=1]
[ext_resource path="res://special_scenes/title_screen/MainScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://special_scenes/Disclaimer.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/UI_effects/426759__magmi-soundtracks__scary-tension-buildup-02.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/soundtracks/lewislancaster-0013shed.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "Appear"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("Line1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Line2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Line3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.5, 5.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_process_input"
}, {
"args": [  ],
"method": "go_ahead"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer2D:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
main_screen = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Line1" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 196.0
margin_right = 1277.0
margin_bottom = 294.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]MILLENNIA OF INTERGALACTIC WARS[/center]"
text = "MILLENNIA OF INTERGALACTIC WARS"

[node name="Line2" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 293.0
margin_right = 1277.0
margin_bottom = 391.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]FINALLY CAME TO AN END[/center]"
text = "FINALLY CAME TO AN END"

[node name="Line3" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 380.0
margin_right = 1277.0
margin_bottom = 478.0
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]WHEN [i]THE GAMES[/i] WERE CREATED[/center]"
text = "WHEN THE GAMES WERE CREATED"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 3 )

[node name="Disclaimer" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"
